# RustyWindow

./: .gitignore  README.md
cli_news/: Cargo.toml  notes.md
cli_news/src/: main.rs
news-api/: Cargo.toml  README.md
news-api/src/: lib.rs  models.rs
rusty_window/: Cargo.toml
rusty_window/src/: main.rs
rusty_window/tests/: demo.rs
