[package]
name = "cli_news"
version = "0.1.0"
edition = "2021"

description = "A CLI news app"
authors = ["Daniel Ford"]
license = "MIT"

[dependencies]
colour = "2.1.0"
serde = {version = "1.0.217", features = ["derive"]}
serde_json = "1.0.134"
ureq = "2.12.1"
news-api = { path = "../news-api" }
dotenv = "0.15.0"